--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="min_temp">Минимальная температура %s</string>
     <string name="max_temp">Максимальная температура %s</string>
     <string name="feels_like">Чувствуется как %s</string>
-    <string name="hint">Данные предоставлены Yandex.Weather</string>
+    <string name="hint">Данные предоставлены Yandex.Weather Api</string>
 </resources>
