Styles Refactor :art: \ Data presentation reformat :memo:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="wind_speed">Скорость ветра %s м/c</string>
     <string name="min_max">Мин. / Макс. температура \n%s / %s</string>
     <string name="pressure_mm">Давление %d мм рт. ст.</string>
+    <string name="pressure_mm_data">%d мм рт. ст.</string>
     <string name="temp_hint">Температура</string>
     <string name="feels_like_hint">Ощущается</string>
     <string name="humidity_hint">Влажность</string>
@@ -18,4 +19,9 @@
     <string name="wind_dir_hint">Направление ветра</string>
     <string name="wind_speed_fact">%s м/c</string>
     <string name="intro_today">Прогноз на настоящее время</string>
+    <string name="menu_hint_refresh">Обновить</string>
+    <string name="menu_hint_settings">Настройки</string>
+    <string name="menu_hint_exit">Выйти</string>
+    <string name="sunset_hint">Закат</string>
+    <string name="sunrise_hint">Рассвет</string>
 </resources>
