--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Forecast</string>
     <string name="temp_data">%d С°</string>
     <string name="unknown_condition">Неопределено</string>
-    <string name="min_temp">Минимальная температура %s</string>
-    <string name="max_temp">Максимальная температура %s</string>
+    <string name="min_temp">Мин. темп.</string>
+    <string name="max_temp">Макс. темп.</string>
     <string name="feels_like">Чувствуется как %s</string>
     <string name="hint">Данные предоставлены Yandex.weather Api</string>
     <string name="intro">Прогноз на ближайшее время</string>
