--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="settings_change">Менять фоновый градиент</string>
     <string name="settings_take">Выбрать стандартный градиент</string>
     <string name="settings_title">Настройки</string>
+    <string name="send_message">Прогноз | %s</string>
 </resources>
